syntax = "proto3";

package payment;

service PaymentService {
  rpc InitiatePayment (InitiatePaymentRequest) returns (InitiatePaymentResponse);
  rpc ProcessPayment (ProcessPaymentRequest) returns (ProcessPaymentResponse);
}

message InitiatePaymentRequest {
  string order_id = 1;
  string user_id = 2;
  double amount = 3;
  string payment_method = 4;
}

message InitiatePaymentResponse {
  string payment_id = 1;
  string status = 2;
  string message = 3;
}

message ProcessPaymentRequest {
  string payment_id = 1;
  string transaction_id = 2;
}

message ProcessPaymentResponse {
  string payment_id = 1;
  string status = 2;
  string transaction_id = 3;
  string message = 4;
}

